# baseline-pretraining

./: Makefile  README.md  pyproject.toml
baseline_pretraining/configs/: general.py
baseline_pretraining/configs/BabyLM/: exp_strict.py  exp_strict_mask.py
baseline_pretraining/datasets/: babyLM_for_hf.py  hf_loaders.py
baseline_pretraining/models/: ckpt_loader.py
baseline_pretraining/scripts/: general_train.py
baseline_pretraining/train/: utils.py
